# autosplat

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLA.md  LICENSING.md  README.md  SECURITY.md  index.html  viewer.html
pipeline/: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml
pipeline/.forgejo/issue_template/: bug_report.md  feature_request.md
pipeline/.gitea/issue_template/: bug_report.yaml  config.yaml  feature_request.yaml
pipeline/config/: default.toml
pipeline/docs/: ARCHITECTURE.md  AUTO-SPLAT PIPELINE — Spec & Implementation Plan.md  CAPTURE-GUIDE.md  CONCEPTS.md  CONFIGURATION.md  GETTING-STARTED.md  PHASE-0-CALIBRATION.md  PHASE-10-WEBUI.md  PHASE-2-WATCHER.md  PHASE-3-RETRY.md  PHASE-9-PLAN.md  PHASE-9-RECON.md  PLY-OUTPUT-FORMAT.md  TROUBLESHOOTING.md  WORKFLOWS.md
pipeline/docs/assets/: max_strasse_autobisect_hero.webm  max_strasse_hero.webm
pipeline/docs/brand/: AutoSplat Brand Kit.html  brand.css  marks.js  render_marks.mjs  tokens.css
pipeline/docs/superpowers/specs/: 2026-05-26-v14-bisection-rescue-design.md  2026-05-27-v15-train-till-plateau-design.md  2026-05-29-dmg-app-design.md  2026-05-29-failure-diagnostics-design.md  2026-05-29-live-progress-design.md  2026-05-29-multi-video-bisection-design.md  2026-06-10-monorepo-merge-design.md
pipeline/examples/: README.md  compress-after.toml  motion-blur-rescue.toml  quality-run.toml  quick-iter.toml  watch-folder-obsidian.toml
pipeline/packaging/: AutoSplat.icns  AutoSplat.spec  autosplat_app.py
pipeline/scripts/: build_app.sh  build_brand_assets.sh  fetch_brush.sh  install_deps.sh  install_splat.sh  install_splat_alias.sh  setup_supersplat.sh
pipeline/src/autosplat/: __init__.py  __main__.py  bisection.py  cli.py  compress.py  config.py  desktop.py  doctor.py  export.py  failure.py  logging.py  notification.py  obsidian.py  pipeline.py  preflight.py  preprocess.py  progress.py  quality.py  sfm.py  train.py  viewer.py  watcher.py
pipeline/src/autosplat/webui/: __init__.py  app.py  jobs_runner.py  progress_view.py  state.py
pipeline/src/autosplat/webui/routes/: captures.py  dashboard.py  health.py  jobs.py  partials.py  source.py
pipeline/tests/: README.md  conftest.py  test_bisection.py  test_cli_cleanup_rescue.py  test_cli_preflight.py  test_cli_rescue.py  test_cli_serve.py  test_compress.py  test_config.py  test_desktop.py  test_doctor.py  test_e2e.py  test_export.py  test_failure.py  test_notification.py  test_obsidian.py  test_pipeline.py  test_preflight.py  test_preprocess.py  test_progress.py  test_quality.py  test_sfm.py  test_train.py  test_viewer.py  test_watcher.py
pipeline/tests/webui/: conftest.py  test_app.py  test_captures.py  test_jobs.py  test_partials.py  test_ui_smoke.py
(+76 files in other folders)
